[package]
name = "kismet"
description = "Random number generator"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
nom = "7.1.1"
num-complex = "0.4.2"
overload = "0.1.1"
logos = "0.12.1"
logos-derive = "0.12.1"
syn = { version = "1.0.98", features = ["derive", "parsing"] }
