[package]
name = "kismet_language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
lalrpop-util = "0.19.8"
logos = "0.12.1"
logos-derive = "0.12.1"
syn = { version = "1.0.98", features = ["derive", "parsing"] }
